# LUE_FZ

./: .env.example  .gitignore  PLANO_PERFORMANCE.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
chat-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
chat-service/app/: buffer.py  config.py  db.py  llm.py  main.py  models.py  pipeline.py  usage.py
chat-service/app/agent/: prompt.py  runner.py  tools.py
chat-service/app/branches/: gap.py  lead.py  mentions.py
chat-service/docs/superpowers/plans/: 2026-06-15-chat-qualidade-custo.md  2026-06-15-compactar-cards-historico.md
chat-service/migrations/: 2026-06-14_ai_usage_per_model.sql  2026-06-14_vw_custo_por_loja.sql
chat-service/scripts/: ab_foreground_broad.py  ab_foreground_effort.py  ab_lead_eval.py  custo_por_loja.sql  demo_compactacao_atacado.py  e2e_attendance.py
chat-service/tests/: conftest.py  test_branch_gap.py  test_branch_lead.py  test_branch_mentions.py  test_buffer.py  test_daily_usage.py  test_history_order.py  test_llm_usage.py  test_main.py  test_models.py  test_pipeline.py  test_prompt.py  test_runner.py  test_tools.py  test_usage.py
docs/migrations-manuais/: 029_perf_indexes.sql  030_drop_redundant_index.sql  README.md
n8n/: SETUP.md  workflow-chat-agent.json  workflow-inventory-sync.json
src/: middleware.ts
src/actions/: admin-subscription.ts  billing.ts  chat.ts  conversas.ts  equipe.ts  impersonation.ts  leads.ts  painel.ts  products.ts  store-settings.ts  terms.ts
supabase-migrations/: 2026-06-14_rpc_painel_atividade_ia.sql
(+302 files in other folders)
